--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^4.17.2
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
+  firebase_core: ^2.30.1
+  firebase_database: ^10.5.4
+  firebase_storage: ^11.7.4
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
